fixed some alignment issues

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -104,8 +104,8 @@ img.vert-move {
 }
 
 .overlay {
-    margin-top: 4rem;
-    padding: 4rem 6rem;
+    margin-top: 2rem;
+    padding: 3rem 4rem;
     background: rgba(255, 255, 255, 0.375);
     box-shadow: 0 0.75rem 2rem 0 rgba(0, 0, 0, 0.1);
     border-radius: 2rem;
